# spoon

./: .example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: brand_researcher.py  perplexity_runner.py  prompt_generator.py  report_generator.py
app/agent/tools/: perplexity.py  web_search.py
app/api/: routes.py
app/models/: requests.py  responses.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx
tests/: test_agent.py  test_api.py
